fixed thurston copy spacing issue, added a new dvd

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -545,4 +545,7 @@ footer {
 .popup p {
   line-height: 1.8em; }
 
+.red-highlight {
+  color: #c0392b; }
+
 /*# sourceMappingURL=css.css.map */
