--- a/assets/scss/pages/_store.scss
+++ b/assets/scss/pages/_store.scss
@@ -97,3 +97,7 @@
     line-height: 1.8em;
   }
 }
+
+.red-highlight {
+  color: $tomato;
+}
